fix: added spacing between buttons

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -131,6 +131,7 @@
   flex-wrap: wrap;
   align-items: center;
   margin-top: 1.5rem;
+  gap: 0.5rem;
 }
 
 .n-card-caption {
